# taker_v0

./: .codecov.yml  .editorconfig  .gitignore  .travis.yml  Makefile  README.md  setup.py
cmake/: FindJsonCpp.cmake
configs/: config.py  manager.py
configs/tests/: test_config.py
runners/: Makefile  __init__.py  runners.py  test_runners.py
runners/taker_unixrun/: CMakeLists.txt  Makefile  main.cpp  processrunner.cpp  processrunner.hpp  utils.cpp  utils.hpp
runners/tests/: CMakeLists.txt  args_test.cpp  cut_exe.cpp  env_test.cpp  runerror_test.cpp  test_runners.py  test_utils.hpp  vector_pushback_test.cpp  vector_test.cpp
scripts/: autopep8.sh  lint.sh  pep8.sh  test.sh
src/cli/: __init__.py  consoleapp.py  find_exe.py
src/cli/tests/: test_app.py
src/compat/: __init__.py  fspath.py
src/configs/: __init__.py  config.py  configs.py  manager.py  managers.py
src/configs/tests/: test_configs.py
src/invoker/: __init__.py  cli.py  cli_base.py  compiler.py  config.py  languages.py  manager.py  profiled_runner.py  sourcecode.py  utils.py
src/invoker/tests/: aplusb.cpp  code_div.cpp  code_gen_out.cpp  code_libs.cpp  code_mylib.h  code_unknown.red  compile_error.cpp  srcbuild.make  test_cli.py  test_common.py  test_compiler.py  test_invoker.py  test_languages.py  test_profiles.py  test_sourcecode.py
src/pytest_fixtures/: __init__.py  fixtures.py
src/runners/: config.py  runners.py
src/runners/taker_unixrun/: CMakeLists.txt  Makefile  config.hpp.in  main.cpp  processrunner.cpp  utils.cpp  utils.hpp
src/runners/tests/: CMakeLists.txt  Makefile  alloc1_test.cpp  alloc2_test.cpp  basic_test.cpp  env_test.cpp  memory_test.cpp  sleepy_test.cpp  test_runners.py  test_utils.hpp  worky_test.cpp
src/srclists/: __init__.py  srclist.py  utils.py
src/srclists/tests/: test_srclist.py
src/taker/: cmd_taskbuilder.py  global_state.py  main.py  taker_app.py
src/taker/tests/: test_main_app.py
src/taskbuilder/: __init__.py  cli.py  commands.py  config.py  makefiles.py  manager.py  repository.py  sections.py  utils.py
src/taskbuilder/tests/: .editorconfig  all.make  (+8 more)
src/typini/: __init__.py  names.py  parser.py
src/util/: __init__.py  extutil.py  lazy_file.py
taker/: __init__.py  empty_test.py  main.py
taskbuilder/: __init__.py  commands.py  makefiles.py  manager.py  repository.py  test_commands.py  test_makefiles.py  test_manager.py  test_repository.py  utils.py
taskbuilder/tests/: .editorconfig  all.make  answer1.txt  dyn_rule1.make  dyn_rule2.make  file_rule1.make  file_rule2.make  phony_rule.make  test_commands.py  test_makefiles.py
typini/: __init__.py  merge.py  names.py  parser.py  parseutils.py  test_names.py  test_parser.py
typini/tests/: test1.json  test1.tini  test_merge.py  test_names.py  test_parse_tree.py  test_parser.py
(+7 files in other folders)
